--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/dantix/lemonjsx#readme",
   "devDependencies": {
     "babel-cli": "^6.18.0",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "jest-cli": "^17.0.3"
