--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "jest-cli": "^17.0.3"
+  },
+  "dependencies": {
+    "warning": "^3.0.0"
   }
 }
