--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "build": "babel src -d dist",
-    "test": "jest --config jestrc.json --coverage"
+    "test": "jest --config jestrc.json --coverage",
+    "report:coverage": "codeclimate-test-reporter < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
+    "codeclimate-test-reporter": "^0.4.0",
     "jest-cli": "^17.0.3"
   },
   "dependencies": {
