--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lemonjsx",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "JSX pragma for generating formatted input for lemonbar",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
     "test": "jest --config jestrc.json --coverage",
