--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,21 @@
 {
   "extends": "eslint-config-airbnb/base",
+  "env": {
+    "node": true
+  },
   "parser": "babel-eslint",
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".json"
+        ]
+        }
+      },
+    "react": {
+        "pragma": "h"
+    }
+  }
 }
